kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskboard
  labels:
    app.kubernetes.io/part-of: final-devops-project
